--- a/src/main/ts/package.json
+++ b/src/main/ts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "proxy": "http://localhost:8080",
   "private": true,
+  "homepage": "http://yazhezhuk.github.io/quiz-app",
   "dependencies": {
     "@babel/core": "latest",
     "@babel/preset-env": "latest",
@@ -37,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +62,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "ts-loader": "^9.4.2"
